# colis-language

./: .gitignore  .travis.yml  Dockerfile  Dockerfile.everything  Makefile  NOTES.org  README.md  args.sh  colis-language.opam  run_tests.sh  simple.fs
docs/: index.html
examples/: loop-symbolic  test2.cls  test3.cls  test4.cls  test5.cls  test6.cls
lib/constraints/src/: constraints.ml  dune  interface.ml  standalone.ml
lib/constraints/src/common/: atom.ml  conj.ml  conj.mli  dune  feat.ml  feat.mli  kind.ml  literal.ml  log.ml  optionMonad.ml  optionMonad.mli  path.ml  path.mli  seq.mli  syntax.ml  var.ml  var.mli
lib/constraints/src/efficient/: constraints_efficient.ml  dune
lib/constraints/src/efficient/clause/: README.md  core.ml  core.mli  dune  external.ml  internal.ml  prettyPrinter.ml
lib/constraints/src/implementation/: affect.ml  affect.mli  constraints_implementation.ml  dummy.ml  dune  efficient.ml  metavar.ml  metavar.mli  naive.ml  pattern.ml  pattern.mli
lib/constraints/src/implementation/efficient/: constraints_implementation_efficient.ml  dune  irreducibleClause.ml
lib/constraints/src/implementation/efficient/clause/: README.md  core.ml  core.mli  dnf.ml  dune  external.ml  iVar.ml  iVar.mli  internal.ml  invariants.ml  prettyPrinter.ml  safe.ml  unsafe.ml  unsafe.mli
lib/constraints/src/implementation/naive/: assign.ml  assign.mli  conj.ml  constraints_implementation_naive.ml  dune  engine.ml  metavar.ml  pattern.ml  pattern.mli  rules.ml  rules.mli
lib/constraints/src/naive/: dune  pattern.ml
src/: colis.ml  colis.mli  colisLexer.mll  colisParser.mly  colis_cmd.ml  dune  errors.ml  options.ml
src/concrete/: Makefile  _tags  auxiliaries.mlw  builtin.ml  concrete_colis.ml  context.mlw  driver.drv  env.ml  env.mli  interpreter.mlw  pathnames.ml  pathnames.mli  semantics.mlw  utilities.ml
src/concrete/auxiliaries/: why3session.xml
src/concrete/interpreter/: why3session.xml
src/concrete/semantics/: why3session.xml  why3session.xml.bak  why3shapes.gz.bak
src/constraints/: atom.mli  clause.mli  colis_constraints.ml  constraints.ml  dune  feature.mli  literal.mli  path.ml  path.mli  var.ml  var.mli  variable.mli
src/constraints/common/: atom.ml  conj.ml  derivable.ml  derivable.mli  disj.ml  dune  feat.ml  feat.mli  kind.ml  path.mli  seq.ml  var.ml  var.mli
src/constraints/efficient/: colis_constraints_efficient.ml  constraints_efficient.ml  dune
src/constraints/efficient/clause/: core.ml  core.mli  dnf.ml  dune  extList.ml  external.ml  internal.ml  prettyPrinter.ml
src/constraints/model/: BUGS.md  CHANGES.md  README.md  common.ml  common.mli  convert.ml  dune  engine.ml  file_system.ml  inode.ml  model.ml  model_ref.ml  mutate.ml  phases.ml  print.ml  process_atom.ml  test_case.ml  test_file2.ml
src/constraints/model/doc/: Makefile  README.md  abstract.tex  code.tex  colis.bib  conclusion.tex  constraints.tex  introduction.tex  logic-FTL.tex  main.tex  packages.tex  preliminaries.tex  spec-POSIX.tex  synthesis.tex  testing.tex  xperiments.tex
src/constraints/model/test/: Test_cmd.py  model_test_cases.txt
src/constraints/naive/: assign.ml  assign.mli  colis_constraints_naive.ml  dune  engine.ml  metavar.mli  pattern.ml  pattern.mli  rules.ml  rules.mli
src/contents/: contents.ml  contents.mli  small.contents  standalone.ml
src/internals/: colis_internals.ml  dune  errors.ml  extList.ml  options.ml
src/language/: Makefile  _tags  colisLexer.mll  colisParser.mly  driver.drv  dune  embellisher.ml  fromColis.ml  fromShell.ml  mystring.mlw  parseColis.ml  syntax.mlw  syntaxHelpers.ml  toColis.ml  toColis.mli
src/symbolic/: cmdParser.ml  cmdParser.mli  collection.ml  collection.mli  collection.mlw  cp.ml  cp.mli  dpkgMaintscriptHelper.ml  dpkgMaintscriptHelper.mli  driver.drv  filesystemSpec.ml  filesystemSpec.mli  mkdir.ml  mv.ml  rm.ml  rm.mli  symbexec.mlw  symbexec_builtin.ml  symbexec_printers.ml  symbexec_propagate.ml  symbolicAuxiliaries.mlw  symbolicBuiltin.ml  symbolicInterpreter.mlw  symbolicUtilities.ml  symbolicUtilities.mli  symbolicUtility.ml  symbolicUtility.mli  test_utility.ml  test_utility.mli  utilitiesSpecification.ml  utilitiesSpecification.mli  which.mli
src/symbolic/collection/: why3session.xml
src/symbolic/symbolicInterpreter/: why3session.xml
src/symbolic/utilities/: README.md  basics.ml  colisInternalUnsafeTouch.ml  cp.ml  cp.mli  dpkg.ml  dpkgMaintscriptHelper.ml  dpkgMaintscriptHelper.mli  emacsPackage.ml  emacsPackage.mli  mkdir.ml  mkdir.mli  mv.ml  mv.mli  rm.ml  rm.mli  test.ml  test.mli  touch.ml  touch.mli  updateAlternatives.ml  updateMenus.ml  updateMenus.mli  which.ml  which.mli
tests/: args.cls  args.sh  case.cls  case.sh  command-not-found.oracle  dune  export.cls  (+80 more)
(+365 files in other folders)
