opam-version: "2.0"

name: "CoLiS-language"
version: "0.1"

synopsis: "Syntax, parsers and interpreters for the CoLiS language"
description: """
Syntax, parsers and interpreters for the CoLiS language
"""

homepage: "https://github.com/colis-anr/colis-language"
bug-reports: "https://github.com/colis-anr/colis-language/issues"

authors: [
  "Benedikt Becker <benedikt.becker@inria.fr"
  "Nicolas Jeannerod <nicolas.jeannerod@irif.fr>"
]
maintainer: "Nicolas Jeannerod <nicolas.jeannerod@irif.fr>"

depends: [
  "camlzip"   {build | with-test}
  "morsmall"
  "ocaml"     {build & >= "4.05"}
  "odoc"      {with-doc}
  "ppx_protocol_conv_yaml"  {with-test}
  "zarith"
  "why3"      {build | with-test}
]
