opam-version: "2.0"

name: "CoLiS-language"
version: "0.1"

synopsis: "Syntax, parsers and interpreters for the CoLiS language"
description: """
Syntax, parsers and interpreters for the CoLiS language
"""

homepage: "https://github.com/colis-anr/colis-language"
bug-reports: "https://github.com/colis-anr/colis-language/issues"

authors: [
  "Benedikt Becker <benedikt.becker@inria.fr"
  "Nicolas Jeannerod <nicolas.jeannerod@irif.fr>"
]

maintainer: "Nicolas Jeannerod <nicolas.jeannerod@irif.fr>"

pin-depends: [
  [ "morbig.dev"   "git+https://github.com/colis-anr/morbig.git" ]
  [ "morsmall.dev" "git+https://github.com/colis-anr/morsmall.git" ]
  [ "why3.dev"     "git+https://gitlab.inria.fr/why3/why3.git#79774910" ]
]

depexts: [
  # For the installation of the automatic provers, see Dockerfile
  ["wget" "autoconf" "automake"] { os-distribution = "ubuntu"
                                 | os-distribution = "debian"
                                 | os-distribution = "archlinux"}
]

depends: [
  "batteries"
  "camlzip"                {(build | with-test) & = "1.07"}  # Version fixed for alt-ergo 2.2.0
  "cmdliner"
  "morbig"                 {= "dev"}
  "morsmall"               {= "dev"}
  "ocaml"                  {build & >= "4.05"}
  "odoc"                   {with-doc}
  "ppx_deriving"           {build}
  "ppx_protocol_conv_yaml" {with-test}
  "why3"                   {= "dev" & (build | with-test)}
  "yaml"                   {with-test & >= "1.0.0"}
  "zarith"
]

build: [
  [make]
]
