(include_subdirs unqualified)

(ocamllex colisLexer)
(menhir (flags --explain) (modules colisParser))

(library
 (name colis)
 (public_name colis-language)
 (libraries zarith str ppx_deriving_yojson.runtime morsmall)
 (modules :standard \ colis_cmd)
 (modules_without_implementation atom clause feature literal variable)
 (flags :standard -w -27))

(executable
 (name colis_cmd)
 (public_name colis)
 (libraries colis-language)
 (modules colis_cmd))
