(include_subdirs unqualified)

(ocamllex colisLexer)
(menhir (flags --explain) (modules colisParser))

(library
 (name colis)
 (public_name colis-language)
 (libraries colis-language.constraints zarith str ppx_deriving_yojson.runtime morsmall batteries)
 (modules :standard \ colis_cmd)
 (flags :standard -w -27 -w -49))

(executable
 (name colis_cmd)
 (public_name colis)
 (libraries colis-language)
 (modules colis_cmd))
