(include_subdirs unqualified)

(library
 (name colis)
 (public_name colis-language)
 (libraries
  colis-language.internals
  colis-constraints
  zarith str
  ppx_deriving_yojson.runtime
  visitors.runtime
  morsmall morsmall.utilities
  cmdliner
  batteries)
 (preprocess (pps visitors.ppx))
 (modules :standard \ colis_cmd)
 (flags :standard -w -27 -w -49))

(executable
 (name colis_cmd)
 (public_name colis)
 (libraries colis-language)
 (modules colis_cmd))
