(library
 (name constraints)
 (public_name colis-language.constraints)
 (libraries colis-language.constraints.common
            colis-language.constraints.implementation)
 (modules :standard \ standalone))

(executable
 (name standalone)
 (libraries colis-language.constraints)
 (modules standalone))
